feat:refactor order/book model,becuse we wnat add preserve and recommand function
