# docs/swagger.yaml
@@ -5,6 +5,8 @@ definitions:
         type: string
       id:
         type: string
+      status:
+        type: integer
       title:
         type: string
     type: object
@@ -31,6 +33,13 @@ definitions:
       completed:
         type: integer
       title:
+        type: string
+    type: object
+  model.LoginInfo:
+    properties:
+      email:
+        type: string
+      password:
         type: string
     type: object
 info:
@@ -123,20 +132,16 @@ paths:
             type: string
       summary: get book record
   /api/v1/login:
-    get:
+    post:
       consumes:
       - application/json
       parameters:
-      - description: email
-        in: query
-        name: email
+      - description: login
+        in: body
+        name: title
         required: true
-        type: string
-      - description: password
-        in: query
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/model.LoginInfo'
       responses:
         "200":
           description: '{"msg":"ok"}'
@@ -154,6 +159,22 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/model.CreateOrder'
+      responses:
+        "200":
+          description: '{"msg":"ok"}'
+          schema:
+            type: string
+      summary: add order record
+  /api/v1/order/{id}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
       responses:
         "200":
           description: '{"msg":"ok"}'
